trunk/Archive2/e7/2db0efff4a0e4f/output
main.cpp: In function 'int main()':
main.cpp:8:21: error: no match for 'operator+' (operand type is 'main()::<lambda(auto:1)>')
     auto a = true ? +f : +g;
                     ^
main.cpp:8:26: error: no match for 'operator+' (operand type is 'main()::<lambda(auto:2)>')
     auto a = true ? +f : +g;
                          ^
